--- a/app/assets/stylesheets/nasa_pictures.scss
+++ b/app/assets/stylesheets/nasa_pictures.scss
@@ -1,3 +1,120 @@
 // Place all the styles related to the NasaPictures controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+body {
+	color: black;
+	font-family: 'Lora', serif;
+	text-transform: uppercase;
+	font-style: italic;
+	/* This doesn't work ?? find out why
+	background: url(<%= @nasa_url %>) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  */
+	
+}
+#video {
+	width: 100%;
+	height: auto;
+	z-index: -1;
+	
+}
+
+div#media{
+	width: 100%;
+	height: 100%;
+}
+
+#picture {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    overflow: fixed;
+    position: absolute;
+    right: 0;
+    top: 0;
+
+  z-index: -1;
+
+}
+
+
+div#title {
+	display: inline-block;
+	position: relative;
+	top: 20px;
+	left: 0px;
+	z-index: 50;
+	font-weight: 700;
+
+	h1 {
+		background-color: rgba(255,255,0,1);
+		padding: 10px;
+		display: inline-block;
+		margin: -9px;
+	}
+
+	h2 {
+		@extend h1;
+		font-weight: 400;
+	}
+	
+}
+
+div#summary {
+	@extend #title;
+
+	background-color: rgba(255,255,0,1);
+	padding: 10px;
+	text-align: justify;
+
+	display: flex;
+	flex-direction: row;
+	flex-wrap: no-wrap;
+	justify-content: flex-start;
+	flex-align: stretch;
+	align-items: center;
+
+	text-transform: none;
+	font-weight: 400;
+	width: 45%;
+	height: auto;
+
+	position: absolute;
+	top: 65%;
+	left: 54%;
+
+
+
+	p {
+		padding: 10px;
+		margin: 0;
+	}
+
+	#date {
+		text-align: right;
+	}
+
+
+	}
+
+div#clickToOpen {
+	text-align: center;
+	order: 1;
+	display: block;
+	width: 10%;
+
+}
+
+div#summaryAndDate {
+		order: 2;
+		flex-grow: 2;
+		width: 89%;
+
+	}
+
