--- a/app/views/nasa_pictures/index.html.erb
+++ b/app/views/nasa_pictures/index.html.erb
@@ -17,7 +17,7 @@
 	<% end %>
 </div>
 <div id="summary">
-	<div id="clickToOpen"><<</div>
+	<div id="clickToOpen">&lt;&lt;</div>
 	<div id="summaryAndDate">
 	<p><%= @nasa_info["explanation"] %></p>
 	<p id="date"><%= @nasa_info["date"] %></p>
