--- a/app/assets/stylesheets/nasa_pictures.scss
+++ b/app/assets/stylesheets/nasa_pictures.scss
@@ -20,8 +20,11 @@ body {
 	
 }
 #video {
+	position: absolute;
+	top: 0;
+	right: 0;
 	width: 100%;
-	height: auto;
+	height: 800px;
 	z-index: -1;
 	
 }
