--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>NASA Picture of the Day</title>
+  <meta name="viewport" content="width=device-width">
   <%= stylesheet_link_tag 'application.css', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application.js', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 
